[fix] Menu: badge alignment on small device

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -1946,7 +1946,9 @@ $ionicon-var-badge-editable: $ionicon-var-edit + "\00a0";
       padding-bottom: 10px;
 
       .badge {
-        top: 9px;
+        top: 10px;
+        padding: 2px 6px;
+        font-size: 12px;
       }
     }
 
